[gd_scene load_steps=9 format=4 uid="uid://dql12dthvtqys"]

[ext_resource type="Script" path="res://Scripts/levels/Level_1/meneger.gd" id="1_hvsvb"]
[ext_resource type="PackedScene" uid="uid://cdn4an1y4inxr" path="res://Scenes/tilemaps/builder.tscn" id="2_h48us"]
[ext_resource type="PackedScene" uid="uid://dk5hlh34tw337" path="res://Scenes/tilemaps/interios.tscn" id="3_d22y3"]
[ext_resource type="PackedScene" uid="uid://bbxpuc56cquka" path="res://Scenes/player/player.tscn" id="4_ek4a8"]
[ext_resource type="PackedScene" uid="uid://nxqayiltfvl4" path="res://Scenes/UI/pause_menu.tscn" id="6_idcv8"]
[ext_resource type="PackedScene" uid="uid://bwwqps06duv4" path="res://Scenes/Devices/lamp2.tscn" id="7_21akj"]
[ext_resource type="PackedScene" uid="uid://bsfn1cgxg50fn" path="res://Scenes/Devices/lamp3.tscn" id="8_maw0y"]
[ext_resource type="PackedScene" uid="uid://lsh7ttgtk372" path="res://Scenes/Devices/tv.tscn" id="9_w5011"]

[node name="level_1" type="Node2D"]

[node name="Meneger" type="Node" parent="."]
process_mode = 3
script = ExtResource("1_hvsvb")

[node name="Builder" parent="." instance=ExtResource("2_h48us")]
position = Vector2(130, 78)
tile_map_data = PackedByteArray("AAAKACEAAAAMAA0AAAAKACIAAAAMAA4AAAAKACMAAAAMAA0AAAALACEAAAANAA0AAAALACIAAAANAA4AAAALACMAAAANAA0AAAAMACEAAAALAA0AAAAMACIAAAALAA4AAAAMACMAAAALAA0AAAANACEAAAAMAA0AAAANACIAAAAMAA4AAAANACMAAAAMAA0AAAAJACEAAAALAA0AAAAJACIAAAALAA4AAAAJACMAAAALAA0AAAAJACQAAAALAA4AAAAKACQAAAAMAA4AAAALACQAAAANAA4AAAAMACQAAAALAA4AAAANACQAAAAMAA4AAAAOACEAAAANAA0AAAAOACIAAAANAA4AAAAOACMAAAANAA0AAAAOACQAAAANAA4AAAAJACUAAAAPAAIAAAAKACUAAAAPAAIAAAALACUAAAAPAAIAAAAMACUAAAAPAAIAAAANACUAAAAPAAIAAAAOACUAAAAPAAIAAAAPAB8AAAAOAAAAAAAPACAAAAAPAAEAAAAPACEAAAAPAAEAAAAPACIAAAAPAAEAAAAPACMAAAAPAAEAAAAPACQAAAAPAAEAAAAPACUAAAAQAAIAAAAIAB8AAAAOAAAAAAAIACAAAAAPAAEAAAAIACEAAAAPAAEAAAAIACIAAAAPAAEAAAAIACMAAAAPAAEAAAAIACQAAAAPAAEAAAAIACUAAAAQAAIAAAAJAB4AAAALAA4AAAAKAB4AAAAMAA4AAAALAB4AAAANAA4AAAAJAB8AAAALAA0AAAAJACAAAAALAA4AAAAKAB8AAAAMAA0AAAAKACAAAAAMAA4AAAALAB8AAAANAA0AAAALACAAAAANAA4AAAAMAB4AAAALAA4AAAANAB4AAAAMAA4AAAAOAB4AAAANAA4AAAAMAB8AAAALAA0AAAAMACAAAAALAA4AAAANAB8AAAAMAA0AAAANACAAAAAMAA4AAAAOAB8AAAANAA0AAAAOACAAAAANAA4AAAAJABYAAAALAA4AAAAKABYAAAAMAA4AAAALABYAAAANAA4AAAAJABcAAAALAA0AAAAJABgAAAALAA4AAAAKABcAAAAMAA0AAAAKABgAAAAMAA4AAAALABcAAAANAA0AAAALABgAAAANAA4AAAAJABkAAAALAA0AAAAJABoAAAALAA4AAAAKABkAAAAMAA0AAAAKABoAAAAMAA4AAAALABkAAAANAA0AAAALABoAAAANAA4AAAAJABsAAAALAA0AAAAJABwAAAALAA4AAAAKABsAAAAMAA0AAAAKABwAAAAMAA4AAAALABsAAAANAA0AAAALABwAAAANAA4AAAAJAB0AAAALAA0AAAAKAB0AAAAMAA0AAAALAB0AAAANAA0AAAAMABYAAAALAA4AAAANABYAAAAMAA4AAAAOABYAAAANAA4AAAAMABcAAAALAA0AAAAMABgAAAALAA4AAAANABcAAAAMAA0AAAANABgAAAAMAA4AAAAOABcAAAANAA0AAAAOABgAAAANAA4AAAAMABkAAAALAA0AAAAMABoAAAALAA4AAAANABkAAAAMAA0AAAANABoAAAAMAA4AAAAOABkAAAANAA0AAAAOABoAAAANAA4AAAAMABsAAAALAA0AAAAMABwAAAALAA4AAAANABsAAAAMAA0AAAANABwAAAAMAA4AAAAOABsAAAANAA0AAAAOABwAAAANAA4AAAAMAB0AAAALAA0AAAANAB0AAAAMAA0AAAAOAB0AAAANAA0AAAAIABwAAAAOAAAAADAPABwAAAAOAAAAADAIAB0AAAANAA0AAAAIAB4AAAANAA4AAAAGAB0AAAAMAA0AAAAGAB4AAAAMAA4AAAAHAB0AAAANAA0AAAAHAB4AAAANAA4AAAAPAB0AAAALAA0AAAAPAB4AAAALAA4AAAAQAB0AAAALAA4AAAAQAB4AAAALAA0AAAARAB0AAAAMAA4AAAARAB4AAAAMAA0AAAASAB0AAAANAA4AAAASAB4AAAANAA0AAAAQACUAAAAPAAIAAAARACUAAAAPAAIAAAASACUAAAAPAAIAAAACACUAAAAPAAIAAAADACUAAAAPAAIAAAAEACUAAAAPAAIAAAAFACUAAAAPAAIAAAAGACUAAAAPAAIAAAAHACUAAAAPAAIAAAABACUAAAAQAAMAAGABAB4AAAAPAAIAAFABAB8AAAAPAAIAAFABACAAAAAPAAIAAFABACEAAAAPAAIAAFABACIAAAAPAAIAAFABACMAAAAPAAIAAFABACQAAAAPAAIAAFABABoAAAAPAAIAAFABABsAAAAPAAIAAFABABwAAAAPAAIAAFABAB0AAAAPAAIAAFATACUAAAAPAAIAAAAUACUAAAAPAAIAAAAVACUAAAAPAAIAAAAWACUAAAAQAAMAADAWABoAAAAPAAIAAGAWABsAAAAPAAIAAGAWABwAAAAPAAIAAGAWAB0AAAAPAAIAAGAWAB4AAAAPAAIAAGAWAB8AAAAPAAIAAGAWACAAAAAPAAIAAGAWACEAAAAPAAIAAGAWACIAAAAPAAIAAGAWACMAAAAPAAIAAGAWACQAAAAPAAIAAGAWABkAAAAQAAMAAFABABkAAAAQAAMAAAACABkAAAAPAAIAADADABkAAAAPAAIAADAEABkAAAAPAAIAADAFABkAAAAPAAIAADAGABkAAAAPAAIAADAHABkAAAAPAAIAADAQABkAAAAPAAIAADARABkAAAAPAAIAADASABkAAAAPAAIAADATABkAAAAPAAIAADAUABkAAAAPAAIAADAVABkAAAAPAAIAADAQABoAAAALAA0AAAAQABsAAAALAA4AAAARABoAAAAMAA0AAAARABsAAAAMAA4AAAASABoAAAANAA0AAAASABsAAAANAA4AAAAQABwAAAALAA0AAAARABwAAAAMAA0AAAASABwAAAANAA0AAAAQAB8AAAALAA4AAAARAB8AAAAMAA4AAAASAB8AAAANAA4AAAAQACAAAAALAA0AAAAQACEAAAALAA4AAAARACAAAAAMAA0AAAARACEAAAAMAA4AAAASACAAAAANAA0AAAASACEAAAANAA4AAAATABoAAAALAA0AAAATABsAAAALAA4AAAAUABoAAAAMAA0AAAAUABsAAAAMAA4AAAAVABoAAAANAA0AAAAVABsAAAANAA4AAAATABwAAAALAA0AAAATAB0AAAALAA4AAAAUABwAAAAMAA0AAAAUAB0AAAAMAA4AAAAVABwAAAANAA0AAAAVAB0AAAANAA4AAAATAB4AAAALAA0AAAATAB8AAAALAA4AAAAUAB4AAAAMAA0AAAAUAB8AAAAMAA4AAAAVAB4AAAANAA0AAAAVAB8AAAANAA4AAAATACAAAAALAA0AAAATACEAAAALAA4AAAAUACAAAAAMAA0AAAAUACEAAAAMAA4AAAAVACAAAAANAA0AAAAVACEAAAANAA4AAAAQACIAAAALAA0AAAAQACMAAAALAA4AAAARACIAAAAMAA0AAAARACMAAAAMAA4AAAASACIAAAANAA0AAAASACMAAAANAA4AAAAQACQAAAALAA0AAAARACQAAAAMAA0AAAASACQAAAANAA0AAAATACIAAAALAA0AAAATACMAAAALAA4AAAAUACIAAAAMAA0AAAAUACMAAAAMAA4AAAAVACIAAAANAA0AAAAVACMAAAANAA4AAAATACQAAAALAA0AAAAUACQAAAAMAA0AAAAVACQAAAANAA0AAAACAB0AAAALAA0AAAACAB4AAAALAA4AAAADAB0AAAAMAA0AAAADAB4AAAAMAA4AAAAEAB0AAAANAA0AAAAEAB4AAAANAA4AAAACAB8AAAALAA0AAAACACAAAAALAA4AAAADAB8AAAAMAA0AAAADACAAAAAMAA4AAAAEAB8AAAANAA0AAAAEACAAAAANAA4AAAACACEAAAALAA0AAAACACIAAAALAA4AAAADACEAAAAMAA0AAAADACIAAAAMAA4AAAAEACEAAAANAA0AAAAEACIAAAANAA4AAAACACMAAAALAA0AAAACACQAAAALAA4AAAADACMAAAAMAA0AAAADACQAAAAMAA4AAAAEACMAAAANAA0AAAAEACQAAAANAA4AAAAFAB0AAAALAA0AAAAFAB4AAAALAA4AAAAFAB8AAAALAA0AAAAFACAAAAALAA4AAAAGAB8AAAAMAA0AAAAGACAAAAAMAA4AAAAHAB8AAAANAA0AAAAHACAAAAANAA4AAAAFACEAAAALAA0AAAAFACIAAAALAA4AAAAGACEAAAAMAA0AAAAGACIAAAAMAA4AAAAHACEAAAANAA0AAAAHACIAAAANAA4AAAAFACMAAAALAA0AAAAFACQAAAALAA4AAAAGACMAAAAMAA0AAAAGACQAAAAMAA4AAAAHACMAAAANAA0AAAAHACQAAAANAA4AAAACABoAAAALAA0AAAACABsAAAALAA4AAAADABoAAAAMAA0AAAADABsAAAAMAA4AAAAEABoAAAANAA0AAAAEABsAAAANAA4AAAACABwAAAALAA0AAAADABwAAAAMAA0AAAAEABwAAAANAA0AAAAFABoAAAALAA0AAAAFABsAAAALAA4AAAAGABoAAAAMAA0AAAAGABsAAAAMAA4AAAAHABoAAAANAA0AAAAHABsAAAANAA4AAAAFABwAAAALAA0AAAAGABwAAAAMAA0AAAAHABwAAAANAA0AAAAIABoAAAAPAAEAAAAIABsAAAAPAAEAAAAIABkAAAAOAAMAADAPABkAAAAOAAMAAAAPABoAAAAPAAEAAAAPABsAAAAPAAEAAAABABQAAAAPAAMAAAABABUAAAAPAAMAAAABABYAAAAPAAMAAAABABcAAAAPAAMAAAABABgAAAAPAAMAAAACABQAAAAPAAMAAAACABUAAAAPAAMAAAACABYAAAAPAAMAAAACABcAAAAPAAMAAAACABgAAAAPAAMAAAADABQAAAAPAAMAAAADABUAAAAPAAMAAAADABYAAAAPAAMAAAADABcAAAAPAAMAAAADABgAAAAPAAMAAAAEABQAAAAPAAMAAAAEABUAAAAPAAMAAAAEABYAAAAPAAMAAAAEABcAAAAPAAMAAAAEABgAAAAPAAMAAAAFABQAAAAPAAMAAAAFABUAAAAPAAMAAAAFABYAAAAPAAMAAAAFABcAAAAPAAMAAAAFABgAAAAPAAMAAAAGABQAAAAPAAMAAAAGABUAAAAPAAMAAAAGABYAAAAPAAMAAAAGABcAAAAPAAMAAAAGABgAAAAPAAMAAAAHABQAAAAPAAMAAAAHABUAAAAPAAMAAAAHABYAAAAPAAMAAAAHABcAAAAPAAMAAAAHABgAAAAPAAMAAAAQABQAAAAPAAMAAAAQABUAAAAPAAMAAAAQABYAAAAPAAMAAAAQABcAAAAPAAMAAAAQABgAAAAPAAMAAAARABQAAAAPAAMAAAARABUAAAAPAAMAAAARABYAAAAPAAMAAAARABcAAAAPAAMAAAARABgAAAAPAAMAAAASABQAAAAPAAMAAAASABUAAAAPAAMAAAASABYAAAAPAAMAAAASABcAAAAPAAMAAAASABgAAAAPAAMAAAATABQAAAAPAAMAAAATABUAAAAPAAMAAAATABYAAAAPAAMAAAATABcAAAAPAAMAAAATABgAAAAPAAMAAAAUABQAAAAPAAMAAAAUABUAAAAPAAMAAAAUABYAAAAPAAMAAAAUABcAAAAPAAMAAAAUABgAAAAPAAMAAAAVABQAAAAPAAMAAAAVABUAAAAPAAMAAAAVABYAAAAPAAMAAAAVABcAAAAPAAMAAAAVABgAAAAPAAMAAAAWABQAAAAPAAMAAAAWABUAAAAPAAMAAAAWABYAAAAPAAMAAAAWABcAAAAPAAMAAAAWABgAAAAPAAMAAAAXABkAAAAPAAMAAAAXABoAAAAPAAMAAAAXABsAAAAPAAMAAAAXABwAAAAPAAMAAAAXAB0AAAAPAAMAAAAXAB4AAAAPAAMAAAAXAB8AAAAPAAMAAAAXACAAAAAPAAMAAAAXACEAAAAPAAMAAAAXACIAAAAPAAMAAAAXACMAAAAPAAMAAAAXACQAAAAPAAMAAAAXACUAAAAPAAMAAAAYABkAAAAPAAMAAAAYABoAAAAPAAMAAAAYABsAAAAPAAMAAAAYABwAAAAPAAMAAAAYAB0AAAAPAAMAAAAYAB4AAAAPAAMAAAAYAB8AAAAPAAMAAAAYACAAAAAPAAMAAAAYACEAAAAPAAMAAAAYACIAAAAPAAMAAAAYACMAAAAPAAMAAAAYACQAAAAPAAMAAAAYACUAAAAPAAMAAAAZABkAAAAPAAMAAAAZABoAAAAPAAMAAAAZABsAAAAPAAMAAAAZABwAAAAPAAMAAAAZAB0AAAAPAAMAAAAZAB4AAAAPAAMAAAAZAB8AAAAPAAMAAAAZACAAAAAPAAMAAAAZACEAAAAPAAMAAAAZACIAAAAPAAMAAAAZACMAAAAPAAMAAAAZACQAAAAPAAMAAAAZACUAAAAPAAMAAAAaABkAAAAPAAMAAAAaABoAAAAPAAMAAAAaABsAAAAPAAMAAAAaABwAAAAPAAMAAAAaAB0AAAAPAAMAAAAaAB4AAAAPAAMAAAAaAB8AAAAPAAMAAAAaACAAAAAPAAMAAAAaACEAAAAPAAMAAAAaACIAAAAPAAMAAAAaACMAAAAPAAMAAAAaACQAAAAPAAMAAAAaACUAAAAPAAMAAAAbABkAAAAPAAMAAAAbABoAAAAPAAMAAAAbABsAAAAPAAMAAAAbABwAAAAPAAMAAAAbAB0AAAAPAAMAAAAbAB4AAAAPAAMAAAAbAB8AAAAPAAMAAAAbACAAAAAPAAMAAAAbACEAAAAPAAMAAAAbACIAAAAPAAMAAAAbACMAAAAPAAMAAAAbACQAAAAPAAMAAAAbACUAAAAPAAMAAAAcABkAAAAPAAMAAAAcABoAAAAPAAMAAAAcABsAAAAPAAMAAAAcABwAAAAPAAMAAAAcAB0AAAAPAAMAAAAcAB4AAAAPAAMAAAAcAB8AAAAPAAMAAAAcACAAAAAPAAMAAAAcACEAAAAPAAMAAAAcACIAAAAPAAMAAAAcACMAAAAPAAMAAAAcACQAAAAPAAMAAAAcACUAAAAPAAMAAAAXABQAAAAPAAMAAAAXABUAAAAPAAMAAAAXABYAAAAPAAMAAAAXABcAAAAPAAMAAAAXABgAAAAPAAMAAAAYABQAAAAPAAMAAAAYABUAAAAPAAMAAAAYABYAAAAPAAMAAAAYABcAAAAPAAMAAAAYABgAAAAPAAMAAAAZABQAAAAPAAMAAAAZABUAAAAPAAMAAAAZABYAAAAPAAMAAAAZABcAAAAPAAMAAAAZABgAAAAPAAMAAAAaABQAAAAPAAMAAAAaABUAAAAPAAMAAAAaABYAAAAPAAMAAAAaABcAAAAPAAMAAAAaABgAAAAPAAMAAAAbABQAAAAPAAMAAAAbABUAAAAPAAMAAAAbABYAAAAPAAMAAAAbABcAAAAPAAMAAAAbABgAAAAPAAMAAAAcABQAAAAPAAMAAAAcABUAAAAPAAMAAAAcABYAAAAPAAMAAAAcABcAAAAPAAMAAAAcABgAAAAPAAMAAAD8/xQAAAAPAAMAAAD8/xUAAAAPAAMAAAD8/xYAAAAPAAMAAAD8/xcAAAAPAAMAAAD8/xgAAAAPAAMAAAD8/xkAAAAPAAMAAAD8/xoAAAAPAAMAAAD8/xsAAAAPAAMAAAD8/xwAAAAPAAMAAAD8/x0AAAAPAAMAAAD8/x4AAAAPAAMAAAD8/x8AAAAPAAMAAAD8/yAAAAAPAAMAAAD8/yEAAAAPAAMAAAD9/xQAAAAPAAMAAAD9/xUAAAAPAAMAAAD9/xYAAAAPAAMAAAD9/xcAAAAPAAMAAAD9/xgAAAAPAAMAAAD9/xkAAAAPAAMAAAD9/xoAAAAPAAMAAAD9/xsAAAAPAAMAAAD9/xwAAAAPAAMAAAD9/x0AAAAPAAMAAAD9/x4AAAAPAAMAAAD9/x8AAAAPAAMAAAD9/yAAAAAPAAMAAAD9/yEAAAAPAAMAAAD+/xQAAAAPAAMAAAD+/xUAAAAPAAMAAAD+/xYAAAAPAAMAAAD+/xcAAAAPAAMAAAD+/xgAAAAPAAMAAAD+/xkAAAAPAAMAAAD+/xoAAAAPAAMAAAD+/xsAAAAPAAMAAAD+/xwAAAAPAAMAAAD+/x0AAAAPAAMAAAD+/x4AAAAPAAMAAAD+/x8AAAAPAAMAAAD+/yAAAAAPAAMAAAD+/yEAAAAPAAMAAAD//xQAAAAPAAMAAAD//xUAAAAPAAMAAAD//xYAAAAPAAMAAAD//xcAAAAPAAMAAAD//xgAAAAPAAMAAAD//xkAAAAPAAMAAAD//xoAAAAPAAMAAAD//xsAAAAPAAMAAAD//xwAAAAPAAMAAAD//x0AAAAPAAMAAAD//x4AAAAPAAMAAAD//x8AAAAPAAMAAAD//yAAAAAPAAMAAAD//yEAAAAPAAMAAAAAABQAAAAPAAMAAAAAABUAAAAPAAMAAAAAABYAAAAPAAMAAAAAABcAAAAPAAMAAAAAABgAAAAPAAMAAAAAABkAAAAPAAMAAAAAABoAAAAPAAMAAAAAABsAAAAPAAMAAAAAABwAAAAPAAMAAAAAAB0AAAAPAAMAAAAAAB4AAAAPAAMAAAAAAB8AAAAPAAMAAAAAACAAAAAPAAMAAAAAACEAAAAPAAMAAAD7/xwAAAAPAAMAAAD7/x0AAAAPAAMAAAD7/x4AAAAPAAMAAAD7/x8AAAAPAAMAAAD7/yAAAAAPAAMAAAD7/yEAAAAPAAMAAAD7/yIAAAAPAAMAAAD7/yMAAAAPAAMAAAD7/yQAAAAPAAMAAAD7/yUAAAAPAAMAAAD8/yIAAAAPAAMAAAD8/yMAAAAPAAMAAAD8/yQAAAAPAAMAAAD8/yUAAAAPAAMAAAD9/yIAAAAPAAMAAAD9/yMAAAAPAAMAAAD9/yQAAAAPAAMAAAD9/yUAAAAPAAMAAAD+/yIAAAAPAAMAAAD+/yMAAAAPAAMAAAD+/yQAAAAPAAMAAAD+/yUAAAAPAAMAAAD//yIAAAAPAAMAAAD//yMAAAAPAAMAAAD//yQAAAAPAAMAAAD//yUAAAAPAAMAAAAAACIAAAAPAAMAAAAAACMAAAAPAAMAAAAAACQAAAAPAAMAAAAAACUAAAAPAAMAAAD7/xUAAAAPAAMAAAD7/xYAAAAPAAMAAAD7/xcAAAAPAAMAAAD7/xgAAAAPAAMAAAD7/xkAAAAPAAMAAAD7/xoAAAAPAAMAAAD7/xsAAAAPAAMAAAD7/xQAAAAPAAMAAAD7/yYAAAAPAAMAAAD7/ycAAAAPAAMAAAD7/ygAAAAPAAMAAAD7/ykAAAAPAAMAAAD7/yoAAAAPAAMAAAD7/ysAAAAPAAMAAAD7/ywAAAAPAAMAAAD7/y0AAAAPAAMAAAD8/yYAAAAPAAMAAAD8/ycAAAAPAAMAAAD8/ygAAAAPAAMAAAD8/ykAAAAPAAMAAAD8/yoAAAAPAAMAAAD8/ysAAAAPAAMAAAD8/ywAAAAPAAMAAAD8/y0AAAAPAAMAAAD9/yYAAAAPAAMAAAD9/ycAAAAPAAMAAAD9/ygAAAAPAAMAAAD9/ykAAAAPAAMAAAD9/yoAAAAPAAMAAAD9/ysAAAAPAAMAAAD9/ywAAAAPAAMAAAD9/y0AAAAPAAMAAAD+/yYAAAAPAAMAAAD+/ycAAAAPAAMAAAD+/ygAAAAPAAMAAAD+/ykAAAAPAAMAAAD+/yoAAAAPAAMAAAD+/ysAAAAPAAMAAAD+/ywAAAAPAAMAAAD+/y0AAAAPAAMAAAD//yYAAAAPAAMAAAD//ycAAAAPAAMAAAD//ygAAAAPAAMAAAD//ykAAAAPAAMAAAD//yoAAAAPAAMAAAD//ysAAAAPAAMAAAD//ywAAAAPAAMAAAD//y0AAAAPAAMAAAAAACYAAAAPAAMAAAAAACcAAAAPAAMAAAAAACgAAAAPAAMAAAAAACkAAAAPAAMAAAAAACoAAAAPAAMAAAAAACsAAAAPAAMAAAAAACwAAAAPAAMAAAAAAC0AAAAPAAMAAAABACYAAAAPAAMAAAABACcAAAAPAAMAAAABACgAAAAPAAMAAAABACkAAAAPAAMAAAABACoAAAAPAAMAAAABACsAAAAPAAMAAAABACwAAAAPAAMAAAABAC0AAAAPAAMAAAACACYAAAAPAAMAAAACACcAAAAPAAMAAAACACgAAAAPAAMAAAACACkAAAAPAAMAAAACACoAAAAPAAMAAAACACsAAAAPAAMAAAACACwAAAAPAAMAAAACAC0AAAAPAAMAAAADACYAAAAPAAMAAAADACcAAAAPAAMAAAADACgAAAAPAAMAAAADACkAAAAPAAMAAAADACoAAAAPAAMAAAADACsAAAAPAAMAAAADACwAAAAPAAMAAAADAC0AAAAPAAMAAAAEACYAAAAPAAMAAAAEACcAAAAPAAMAAAAEACgAAAAPAAMAAAAEACkAAAAPAAMAAAAEACoAAAAPAAMAAAAEACsAAAAPAAMAAAAEACwAAAAPAAMAAAAEAC0AAAAPAAMAAAAFACYAAAAPAAMAAAAFACcAAAAPAAMAAAAFACgAAAAPAAMAAAAFACkAAAAPAAMAAAAFACoAAAAPAAMAAAAFACsAAAAPAAMAAAAFACwAAAAPAAMAAAAFAC0AAAAPAAMAAAAGACYAAAAPAAMAAAAGACcAAAAPAAMAAAAGACgAAAAPAAMAAAAGACkAAAAPAAMAAAAGACoAAAAPAAMAAAAGACsAAAAPAAMAAAAGACwAAAAPAAMAAAAGAC0AAAAPAAMAAAAHACYAAAAPAAMAAAAHACcAAAAPAAMAAAAHACgAAAAPAAMAAAAHACkAAAAPAAMAAAAHACoAAAAPAAMAAAAHACsAAAAPAAMAAAAHACwAAAAPAAMAAAAHAC0AAAAPAAMAAAAIACYAAAAPAAMAAAAIACcAAAAPAAMAAAAIACgAAAAPAAMAAAAIACkAAAAPAAMAAAAIACoAAAAPAAMAAAAIACsAAAAPAAMAAAAIACwAAAAPAAMAAAAIAC0AAAAPAAMAAAAJACYAAAAPAAMAAAAJACcAAAAPAAMAAAAJACgAAAAPAAMAAAAJACkAAAAPAAMAAAAJACoAAAAPAAMAAAAJACsAAAAPAAMAAAAJACwAAAAPAAMAAAAJAC0AAAAPAAMAAAAKACYAAAAPAAMAAAAKACcAAAAPAAMAAAAKACgAAAAPAAMAAAAKACkAAAAPAAMAAAAKACoAAAAPAAMAAAAKACsAAAAPAAMAAAAKACwAAAAPAAMAAAAKAC0AAAAPAAMAAAALACYAAAAPAAMAAAALACcAAAAPAAMAAAALACgAAAAPAAMAAAALACkAAAAPAAMAAAALACoAAAAPAAMAAAALACsAAAAPAAMAAAALACwAAAAPAAMAAAALAC0AAAAPAAMAAAAMACYAAAAPAAMAAAAMACcAAAAPAAMAAAAMACgAAAAPAAMAAAAMACkAAAAPAAMAAAAMACoAAAAPAAMAAAAMACsAAAAPAAMAAAAMACwAAAAPAAMAAAAMAC0AAAAPAAMAAAANACYAAAAPAAMAAAANACcAAAAPAAMAAAANACgAAAAPAAMAAAANACkAAAAPAAMAAAANACoAAAAPAAMAAAANACsAAAAPAAMAAAANACwAAAAPAAMAAAANAC0AAAAPAAMAAAAOACYAAAAPAAMAAAAOACcAAAAPAAMAAAAOACgAAAAPAAMAAAAOACkAAAAPAAMAAAAOACoAAAAPAAMAAAAOACsAAAAPAAMAAAAOACwAAAAPAAMAAAAOAC0AAAAPAAMAAAAPACYAAAAPAAMAAAAPACcAAAAPAAMAAAAPACgAAAAPAAMAAAAPACkAAAAPAAMAAAAPACoAAAAPAAMAAAAPACsAAAAPAAMAAAAPACwAAAAPAAMAAAAPAC0AAAAPAAMAAAAQACYAAAAPAAMAAAAQACcAAAAPAAMAAAAQACgAAAAPAAMAAAAQACkAAAAPAAMAAAAQACoAAAAPAAMAAAAQACsAAAAPAAMAAAAQACwAAAAPAAMAAAAQAC0AAAAPAAMAAAARACYAAAAPAAMAAAARACcAAAAPAAMAAAARACgAAAAPAAMAAAARACkAAAAPAAMAAAARACoAAAAPAAMAAAARACsAAAAPAAMAAAARACwAAAAPAAMAAAARAC0AAAAPAAMAAAASACYAAAAPAAMAAAASACcAAAAPAAMAAAASACgAAAAPAAMAAAASACkAAAAPAAMAAAASACoAAAAPAAMAAAASACsAAAAPAAMAAAASACwAAAAPAAMAAAASAC0AAAAPAAMAAAATACYAAAAPAAMAAAATACcAAAAPAAMAAAATACgAAAAPAAMAAAATACkAAAAPAAMAAAATACoAAAAPAAMAAAATACsAAAAPAAMAAAATACwAAAAPAAMAAAATAC0AAAAPAAMAAAAUACYAAAAPAAMAAAAUACcAAAAPAAMAAAAUACgAAAAPAAMAAAAUACkAAAAPAAMAAAAUACoAAAAPAAMAAAAUACsAAAAPAAMAAAAUACwAAAAPAAMAAAAUAC0AAAAPAAMAAAAVACYAAAAPAAMAAAAVACcAAAAPAAMAAAAVACgAAAAPAAMAAAAVACkAAAAPAAMAAAAVACoAAAAPAAMAAAAVACsAAAAPAAMAAAAVACwAAAAPAAMAAAAVAC0AAAAPAAMAAAAWACYAAAAPAAMAAAAWACcAAAAPAAMAAAAWACgAAAAPAAMAAAAWACkAAAAPAAMAAAAWACoAAAAPAAMAAAAWACsAAAAPAAMAAAAWACwAAAAPAAMAAAAWAC0AAAAPAAMAAAAXACYAAAAPAAMAAAAXACcAAAAPAAMAAAAXACgAAAAPAAMAAAAXACkAAAAPAAMAAAAXACoAAAAPAAMAAAAXACsAAAAPAAMAAAAXACwAAAAPAAMAAAAXAC0AAAAPAAMAAAAYACYAAAAPAAMAAAAYACcAAAAPAAMAAAAYACgAAAAPAAMAAAAYACkAAAAPAAMAAAAYACoAAAAPAAMAAAAYACsAAAAPAAMAAAAYACwAAAAPAAMAAAAYAC0AAAAPAAMAAAAZACYAAAAPAAMAAAAZACcAAAAPAAMAAAAZACgAAAAPAAMAAAAZACkAAAAPAAMAAAAZACoAAAAPAAMAAAAZACsAAAAPAAMAAAAZACwAAAAPAAMAAAAZAC0AAAAPAAMAAAAaACYAAAAPAAMAAAAaACcAAAAPAAMAAAAaACgAAAAPAAMAAAAaACkAAAAPAAMAAAAaACoAAAAPAAMAAAAaACsAAAAPAAMAAAAaACwAAAAPAAMAAAAaAC0AAAAPAAMAAAAbACYAAAAPAAMAAAAbACcAAAAPAAMAAAAbACgAAAAPAAMAAAAbACkAAAAPAAMAAAAbACoAAAAPAAMAAAAbACsAAAAPAAMAAAAbACwAAAAPAAMAAAAbAC0AAAAPAAMAAAAcACYAAAAPAAMAAAAcACcAAAAPAAMAAAAcACgAAAAPAAMAAAAcACkAAAAPAAMAAAAcACoAAAAPAAMAAAAcACsAAAAPAAMAAAAcACwAAAAPAAMAAAAcAC0AAAAPAAMAAAD4/xQAAAAPAAMAAAD4/xUAAAAPAAMAAAD4/xYAAAAPAAMAAAD4/xcAAAAPAAMAAAD4/xgAAAAPAAMAAAD4/xkAAAAPAAMAAAD4/xoAAAAPAAMAAAD4/xsAAAAPAAMAAAD4/xwAAAAPAAMAAAD4/x0AAAAPAAMAAAD4/x4AAAAPAAMAAAD4/x8AAAAPAAMAAAD4/yAAAAAPAAMAAAD4/yEAAAAPAAMAAAD4/yIAAAAPAAMAAAD4/yMAAAAPAAMAAAD4/yQAAAAPAAMAAAD4/yUAAAAPAAMAAAD4/yYAAAAPAAMAAAD4/ycAAAAPAAMAAAD4/ygAAAAPAAMAAAD4/ykAAAAPAAMAAAD4/yoAAAAPAAMAAAD4/ysAAAAPAAMAAAD4/ywAAAAPAAMAAAD5/xQAAAAPAAMAAAD5/xUAAAAPAAMAAAD5/xYAAAAPAAMAAAD5/xcAAAAPAAMAAAD5/xgAAAAPAAMAAAD5/xkAAAAPAAMAAAD5/xoAAAAPAAMAAAD5/xsAAAAPAAMAAAD5/xwAAAAPAAMAAAD5/x0AAAAPAAMAAAD5/x4AAAAPAAMAAAD5/x8AAAAPAAMAAAD5/yAAAAAPAAMAAAD5/yEAAAAPAAMAAAD5/yIAAAAPAAMAAAD5/yMAAAAPAAMAAAD5/yQAAAAPAAMAAAD5/yUAAAAPAAMAAAD5/yYAAAAPAAMAAAD5/ycAAAAPAAMAAAD5/ygAAAAPAAMAAAD5/ykAAAAPAAMAAAD5/yoAAAAPAAMAAAD5/ysAAAAPAAMAAAD5/ywAAAAPAAMAAAD6/xQAAAAPAAMAAAD6/xUAAAAPAAMAAAD6/xYAAAAPAAMAAAD6/xcAAAAPAAMAAAD6/xgAAAAPAAMAAAD6/xkAAAAPAAMAAAD6/xoAAAAPAAMAAAD6/xsAAAAPAAMAAAD6/xwAAAAPAAMAAAD6/x0AAAAPAAMAAAD6/x4AAAAPAAMAAAD6/x8AAAAPAAMAAAD6/yAAAAAPAAMAAAD6/yEAAAAPAAMAAAD6/yIAAAAPAAMAAAD6/yMAAAAPAAMAAAD6/yQAAAAPAAMAAAD6/yUAAAAPAAMAAAD6/yYAAAAPAAMAAAD6/ycAAAAPAAMAAAD6/ygAAAAPAAMAAAD6/ykAAAAPAAMAAAD6/yoAAAAPAAMAAAD6/ysAAAAPAAMAAAD6/ywAAAAPAAMAAAD4/y0AAAAPAAMAAAD5/y0AAAAPAAMAAAD6/y0AAAAPAAMAAAAdABgAAAAPAAMAAAAdABkAAAAPAAMAAAAdABoAAAAPAAMAAAAdABsAAAAPAAMAAAAdABwAAAAPAAMAAAAdAB0AAAAPAAMAAAAdAB4AAAAPAAMAAAAdAB8AAAAPAAMAAAAdACAAAAAPAAMAAAAdACEAAAAPAAMAAAAdACIAAAAPAAMAAAAdACMAAAAPAAMAAAAdACQAAAAPAAMAAAAdACUAAAAPAAMAAAAdACYAAAAPAAMAAAAdACcAAAAPAAMAAAAdACgAAAAPAAMAAAAdACkAAAAPAAMAAAAdACoAAAAPAAMAAAAdACsAAAAPAAMAAAAdACwAAAAPAAMAAAAdAC0AAAAPAAMAAAAeABgAAAAPAAMAAAAeABkAAAAPAAMAAAAeABoAAAAPAAMAAAAeABsAAAAPAAMAAAAeABwAAAAPAAMAAAAeAB0AAAAPAAMAAAAeAB4AAAAPAAMAAAAeAB8AAAAPAAMAAAAeACAAAAAPAAMAAAAeACEAAAAPAAMAAAAeACIAAAAPAAMAAAAeACMAAAAPAAMAAAAeACQAAAAPAAMAAAAeACUAAAAPAAMAAAAeACYAAAAPAAMAAAAeACcAAAAPAAMAAAAeACgAAAAPAAMAAAAeACkAAAAPAAMAAAAeACoAAAAPAAMAAAAeACsAAAAPAAMAAAAeACwAAAAPAAMAAAAeAC0AAAAPAAMAAAAfABgAAAAPAAMAAAAfABkAAAAPAAMAAAAfABoAAAAPAAMAAAAfABsAAAAPAAMAAAAfABwAAAAPAAMAAAAfAB0AAAAPAAMAAAAfAB4AAAAPAAMAAAAfAB8AAAAPAAMAAAAfACAAAAAPAAMAAAAfACEAAAAPAAMAAAAfACIAAAAPAAMAAAAfACMAAAAPAAMAAAAfACQAAAAPAAMAAAAfACUAAAAPAAMAAAAfACYAAAAPAAMAAAAfACcAAAAPAAMAAAAfACgAAAAPAAMAAAAfACkAAAAPAAMAAAAfACoAAAAPAAMAAAAfACsAAAAPAAMAAAAfACwAAAAPAAMAAAAfAC0AAAAPAAMAAAAdABQAAAAPAAMAAAAdABUAAAAPAAMAAAAdABYAAAAPAAMAAAAdABcAAAAPAAMAAAAeABQAAAAPAAMAAAAeABUAAAAPAAMAAAAeABYAAAAPAAMAAAAeABcAAAAPAAMAAAAfABQAAAAPAAMAAAAfABUAAAAPAAMAAAAfABYAAAAPAAMAAAAfABcAAAAPAAMAAAAJABEAAAALAA4AAAAKABEAAAAMAA4AAAALABEAAAANAA4AAAAJABIAAAALAA0AAAAJABMAAAALAA4AAAAKABIAAAAMAA0AAAAKABMAAAAMAA4AAAALABIAAAANAA0AAAALABMAAAANAA4AAAAJABQAAAALAA0AAAAJABUAAAALAA4AAAAKABQAAAAMAA0AAAAKABUAAAAMAA4AAAALABQAAAANAA0AAAALABUAAAANAA4AAAAMABEAAAALAA4AAAANABEAAAAMAA4AAAAOABEAAAANAA4AAAAMABIAAAALAA0AAAAMABMAAAALAA4AAAANABIAAAAMAA0AAAANABMAAAAMAA4AAAAOABIAAAANAA0AAAAOABMAAAANAA4AAAAMABQAAAALAA0AAAAMABUAAAALAA4AAAANABQAAAAMAA0AAAANABUAAAAMAA4AAAAOABQAAAANAA0AAAAOABUAAAANAA4AAAAIABQAAAAPAAIAAFAIABUAAAAPAAIAAFAIABYAAAAPAAIAAFAIABcAAAAPAAIAAFAIABgAAAAPAAIAAFAPABQAAAAPAAIAAGAPABUAAAAPAAIAAGAPABYAAAAPAAIAAGAPABcAAAAPAAIAAGAPABgAAAAPAAIAAGA=")

[node name="Interios" parent="." instance=ExtResource("3_d22y3")]
scale = Vector2(1.00515, 0.99697)

[node name="player" parent="." instance=ExtResource("4_ek4a8")]
position = Vector2(321, 629)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Pause menu" parent="CanvasLayer" instance=ExtResource("6_idcv8")]
process_mode = 2

[node name="Lamp" parent="." instance=ExtResource("7_21akj")]
position = Vector2(347, 382)

[node name="Lamp2" parent="." instance=ExtResource("7_21akj")]
position = Vector2(258, 859)

[node name="Lamp8" parent="." instance=ExtResource("7_21akj")]
position = Vector2(206, 856)

[node name="Lamp3" parent="." instance=ExtResource("7_21akj")]
position = Vector2(321, 871)

[node name="Lamp4" parent="." instance=ExtResource("7_21akj")]
position = Vector2(448, 884)

[node name="Lamp5" parent="." instance=ExtResource("7_21akj")]
position = Vector2(391, 881)

[node name="Lamp6" parent="." instance=ExtResource("7_21akj")]
position = Vector2(637, 886)

[node name="Lamp7" parent="." instance=ExtResource("7_21akj")]
position = Vector2(490, 885)

[node name="Hol" parent="." instance=ExtResource("8_maw0y")]
position = Vector2(563, 262)

[node name="Tv" parent="." instance=ExtResource("9_w5011")]
position = Vector2(541, 879)

[node name="Tv2" parent="." instance=ExtResource("9_w5011")]
position = Vector2(154, 860)

[connection signal="pressed" from="CanvasLayer/Pause menu/Panel/VBoxContainer/Resume" to="Meneger" method="_on_resume_pressed"]
[connection signal="pressed" from="CanvasLayer/Pause menu/Panel/VBoxContainer/Restart" to="Meneger" method="_on_restart_pressed"]
[connection signal="pressed" from="CanvasLayer/Pause menu/Panel/VBoxContainer/Quit" to="Meneger" method="_on_quit_pressed"]

[editable path="CanvasLayer/Pause menu"]
